<resources>
    <string name="app_name">Remedy</string>
    <string name="car_scan_button">ZESKANUJ SWÓJ POJAZD</string>
    <string name="about">INFORMACJE O APLIKACJI</string>
    <string name="register">Zarejestruj się</string>
    <string name="login">Zaloguj się</string>
    <string name="back_button">Wróć</string>
    <string name="scan_button">Skanuj pojazd</string>
    <string name="next_button">Dalej</string>
    <string name="WIP_text">WORK IN PROGRESS</string>
    <string name="Cooling_fluid_btn">PŁYN CHŁODNICZY</string>
    <string name="Oil_level_btn">POZIOM OLEJU</string>
    <string name="Oil_refill_btn">WLEW OLEJU</string>
    <string name="Windshield_washer_fluid_btn">PŁYN DO SPRYSKIWACZY</string>
    <string name="Brake_fluid">PŁYN HAMULCOWY</string>
    <string name="Choose_part_text"> Proszę wybrać odpowiednią część </string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="general_info">
        Aplikacja REMEDY powstała z myślą o każdym kierowcy.
        Remedy pozwoli na szybkie zeskanowanie i rozpoznanie powierzchni pod pokrywą silnika, czyli mówiąc potocznie \"pod maską\".
        Wykorzystując technologię ARCore, rozszerzającą nasze spojrzenie na świat można w łatwy sposób zidentyfikować każdy komponent silnika.
        Aplikację można wykorzystać zarówno do nauki jak i użyć w przypadku chęci wymiany odpowiednich płynów takich jak, olej, płyn do spryskiwaczy lub płyn do chłodnicy.
        Ponadto aplikacja ułatwi wykonywanie tych czynności, wyświetlając informacje niezbędne do poprawnego przejścia przez cały proces.
    </string>
    <string name="receiving_group">
        Aplikacja przeznaczona jest dla osób posiadających samochód, lub też dla osób którzy mają z nimi styczność w życiu codziennym.
        Użytkownik w bardzo prosty sposób jest w stanie rozpoznać co dokładnie kryje się pod maską samochodu. W dzisiejszych czasach
        powstają najróżniejsze układy komponentów na które składa się obszar pod pokrywą silnika. Aplikacja REMEDY przychodzi z ratunkiem
        i tym samym oszczędza niezliczone ilości minut przeznaczonych na szukaniu.
    </string>
    <string name="app_development">Plany rozwojowe aplikacji nie zamykają jej funkcjonalności na skanowaniu obszarów pod pokrywami różnych silników, w przyszłości aplikacja
        REMEDY będzie pozwalała jej użytkownikowi na rozpoznawanie całych kokpitów czy też desek rozdzielczych. Rozwiązanie to może okazać się niezwykle przydatne
        w przypadku starych modeli samochodów. Często instrukcje obsługi do tego typu pojazdów są nieosiągalne a rozszyfrowanie niektórych przycisków potrafi być niezwykle uciążliwe.
        Następną funkjonalnością aplikacji REMEDY będzie wyświetlanie, części zamiennych uszkodzonego modułu pod pokrywą silnika, możliwość sprawdzenia cen płynów eksploatacyjnych.
    </string>
    <string name="author">Autor REMEDY: Wiktor Pink</string>
    <string name="ford_text">Ford</string>
    <string name="car_select_text">Wybierz markę pojazdu, a następnie jego model...</string>
    <string name="audi_text">Audi</string>
    <string name="nissan_text">Nissan</string>
    <string name="googleAuth">Zaloguj się przez google</string>
    <string name="choose_mark">Wybierz markę: </string>
    <string name="choose_model">Wybierz model: </string>
    <string name="cooling_fluid_credentials">Płyn chłodniczy jest trzecim najważniejszym płynem w samochodzie zaraz obok oleju silnikowego oraz przekładniowego. Jego zadaniem jest
    utrzymanie odpowiedniej temperatury silnika który może dzięki optymalnej pracy zachować właściwe parametry. Niedobór płynu chłodniczego może doprowadzić do przegrzania
        oraz zatarcia silnika. </string>
    <string name="cooling_fluid_exploitation">Płyn chłodniczy wraz z upływem czasu stopniowo traci swoje właściwości. Zaleca się wymianę płynu chłodniczego nie rzadziej niż co pięć lat.
        Warto zajrzeć do instrukcji obsługi pojazdu i zapoznać się z zaleceniami producenta pojazdu. W przypadku gdy w zbiorniku na płyn chłodzący jest zauważalny jego deficyt, rodzi się pytanie a mianowicie,
    czy płyny chłodzące można ze sobą mieszać. Ogólnie rzecz biorąc każdy płyn chłodniczy jest produkowany na bazie glikolu etylowego który jest substancją mieszalną, nie mniej jednak mieszanie tego typu płynów mimo iż jest możliwe
     to nie jest zalecane. Mimo że baza płynu jest taka sama w przypadku większości marek to mają różne składy chemiczne oraz dodatki antykorozyjne. Po zmieszaniu różnych płynów chłodniczych może pogorszyć ich własności antykorozyjne.
     W przypadku widocznego ubytku najlepszym rozwiązaniem będzie dolanie wody destylowanej.</string>

    <string name="windshield_washer_fluid_credentials">Płyn do spryskiwaczy jest dość istotnym elementem, który znacząco wpływa na komfort jazdy samochodem. Pozwala on na wyczyszczenie szyby podczas prowadzenia pojazdu.</string>
    <string name="windshield_washer_fluid_exploitation">Płyn do spryskiwaczy należy regularnie uzupełniać oraz sprawdzać jego poziom. Uzupełnianie płynu jest niezwykle proste, należy po prostu dolać odpowiednią ilość tak żeby jego poziom
         znajdował się pomiędzy minimum a maksimum. Istotną kwestią do porusznia w temacie płynu do spryskiwaczy jest jego odpowiednie dobranie w zależności od panujacych warunków na drodze. W przypadku zimy należy wybrać płyn
         przeznaczony do takich właśnie warunków zazwyczaj na etykiecie widnieje napis "zimowy". W przypadku lata lub cieplejszych pór roku dobrym wyborem będzie płyn letni. Wlanie letniego płynu w zimę może skutkować
         zamarznięciem cieczy w zbiorniku.</string>

    <string name="oil_refill_main_info">Olej silnikowy jak i jego sprawdzanie jest niezwykle istotne. Regularna kontrola poziomu oleju silnikowego minimalizuje ryzyko związane z niepotrzebnymi kosztami
    związanymi z uszkodzeniami silnika i potrafi wcześnie zapobiec przykrym wydarzeniom. </string>
    <string name="oil_refill_credentials">Aby poprawnie przeprowadzić kontrolę poziomu oleju, należy cały proces rozpocząć od upewnienia się, że silnik jest stosunkowo zimny. Następnym krokiem jest znalezienie bagnetu
    odpowiedzialnego za kontrolę poziomu oleju. Po zlokalizowaniu bagnetu należy go wyciągnąć i przetrzeć suchą szmatką lub kawałkiem papieru i ponownie włożyć na miejsce. Po ponownym wyciągnięciu dopiero jest możliwy
    poprawny odczyt a olej powinien znajdować się pośrodku podziałki(minimum i maksimum). W przypadku niedoboru oleju należy niezwłocznie uzupełnić ubytek. Optymalnym czasem na wymianę oleju to ekwiwalent przejechania
    od piętnastu do trzydziestu tysięcy kilometrów. Istotną kwestią którą trzeba uwzględnić podczas kontroli poziomu oleju jest to aby wzrócić uwagę na to aby samochód był zaparkowany na płaskim terenie. </string>
    <string name ="oil_level_main_info">Wlew oleju silnikowego jest odpowiedzialny za utrzymywanie odpowiedniego poziomu oleju w samochodzie. Podczas gdy po przeprowadzonej kontroli poziomu oleju silnikowego
        okaże się, że jest go za mało możemy dolać ubytek oleju korzystając właśnie z wcześniej wspomnianego wlewu. Podczas czynności uzupełniania brakującego oleju należy zachować czujność aby poziom oleju nie
        wykraczał na podziałce ponad maksimum</string>
    <string name ="oil_refill">Wymiana oleju silnikowego</string>
    <string name ="oil_level_refill_info">Przed wymianą oleju silnikowego należy zadbać o odpowiednią wannę, aby móc zebrać w niej wymieniany olej oraz o nowy filtr oleju, który odpowiedzialny jest za zbieranie
        nieczystości gromadzonych w samochodzie. Proces wymiany oleju rozpoczyna się od podniesienia przedniej części samochodu w celu uzyskania dostępu do korka w misce olejowej. Po podstawieniu wanienki pod korek
        można go odkręcić i spokojnie poczekać aż cały olej do niej spłynie. Kolejnym krokiem jest zatkanie korka oraz wymiana filtra olejowego. Po wykonaniu wszystkich czynności można opuścić samochód i przystąpić do
        wlewania nowego oleju. Ilość oraz rodzaj wlewanego oleju powinna być zgodna z zaleceniami producenta pojazdu.</string>
    <string name="oil_level_important_info">Wymiana oleju samochodowego powinna być wykonywana co około piętnaście tysięcy kilometrów, lub co rok w przypadku gdy użytkownik samochodu nie przejechał wyznaczonej do
    wymiany oleju odległości.</string>


    <string name="brakes_fluid_main_info">Aby układ hamowania w ciężkim i rozpędzonym samochodzie zadziałał poprawnie, konieczne jest dociśnięcie klocka ze znaczną siłą.
        Odpowiedni nacisk uzyskuje się poprzez zastosowanie specjalnej pompy, która za pomocą płynu hamulcowego naciska na tłoczek klocka. Wskutek tarcia poszczególne elementy układu znacząco się nagrzewają, co
    prowadzi do podgrzania płynu hamulcowego. Początkowo jest on odporny na działanie wysokich temperatur ale z upływem czasu traci on swoje właściwości. Ciekawostką jest fakt, iż płyn hamulcowy jest
    higroskopijny i w naturalny sposób pochałania wilgoć która dostaje się poprzez nieszczelności w przewodach czy uszczelkach. </string>
    <string name="brakes_fluid_exploitation">Poziom płynu hamulcowego powinien znajdować się pomiędzy wartością minimum a maksimum najdującą się na zbiorniku. W przypadku wyraźnego upytku płynu należy go dolać
     zwracając uwagę na rodzaj wcześniej wlewanego płynu. Jeśli płynu hamulcowego jest natomiast za dużo najlepszym rozwiązaniem będzie odessanie nadmiaru przy pomocy strzykawki.</string>
    <string name="oil_level_important_info_label">Istotne informacje</string>
    <string name="exploatation">Eksploatacja</string>
</resources>