<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/background_gradient"
    android:fillViewport="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cooling_fluid_textView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <Button
            android:id="@+id/cooling_fluid_backButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/mitr_medium"
            android:gravity="center_vertical"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cooling_fluid_carscan"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/cooling_fluid_carscan"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="172dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/mitr_medium"
            android:gravity="center_vertical"
            android:text="@string/scan_button"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.838"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Exploatation"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/cooling_fluid_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mitr_medium"
            android:text="@string/Cooling_fluid_btn"
            android:textAlignment="center"
            android:textColor="#EFEBE9"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.21" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="378dp"
            android:layout_height="237dp"
            android:layout_marginBottom="328dp"
            android:background="@drawable/text_view_style"
            android:padding="20px"
            android:text="@string/cooling_fluid_credentials"
            android:textAlignment="viewStart"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/cooling_fluid_backButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/GeneralInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mitr_medium"
            android:padding="22px"
            android:text="Informacje ogólne"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cooling_fluid_textView" />

        <TextView
            android:id="@+id/Exploatation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:fontFamily="@font/mitr_medium"
            android:padding="22px"
            android:text="@string/exploatation"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


