<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/background_gradient"
    android:fillViewport="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cooling_fluid_textView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegisterActivity">

        <Button
            android:id="@+id/windshield_washer_fluid_backButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/mitr_medium"
            android:gravity="center_vertical"
            android:text="@string/back_button"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/windshield_washer_fluid_carscan"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="62dp"
            android:layout_marginStart="-70dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/windshield_washer_fluid_backButton"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/logo_remedy_2" />
        <Button
            android:id="@+id/windshield_washer_fluid_carscan"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/mitr_medium"
            android:gravity="center_vertical"
            android:text="@string/scan_button"
            android:textAlignment="center"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/cooling_fluid_textView"
            android:layout_width="262dp"
            android:layout_height="47dp"
            android:fontFamily="@font/mitr_medium"
            android:text="@string/Oil_level_btn"
            android:textAlignment="center"
            android:textColor="#EFEBE9"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.21" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="401dp"
            android:layout_height="153dp"
            android:background="@drawable/text_view_style"
            android:padding="20px"
            android:text="@string/oil_refill_main_info"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/Exploatation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/GeneralInformation" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="400dp"
            android:layout_height="419dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/text_view_style"
            android:padding="20px"
            android:text="@string/oil_refill_credentials"
            android:textAlignment="textStart"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/Exploatation" />

        <TextView
            android:id="@+id/GeneralInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mitr_medium"
            android:padding="22px"
            android:text="Informacje ogólne"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cooling_fluid_textView" />

        <TextView
            android:id="@+id/Exploatation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mitr_medium"
            android:padding="22px"
            android:text="@string/exploatation"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


