<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="392dp"
        android:layout_height="648dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="692dp"
            app:srcCompat="@drawable/mirrored_wrench" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="693dp"
            app:srcCompat="@drawable/wrench" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/main_logoImage"
        android:layout_width="250dp"
        android:layout_height="207dp"
        android:layout_marginTop="40dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_remedy_2"
        tools:srcCompat="@drawable/logo_remedy_2" />

    <Button
        android:id="@+id/main_scanYourCarButton"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/mitr_medium"
        android:gravity="center_vertical"
        android:text="@string/car_scan_button"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/main_appInfoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_logoImage"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/main_appInfoButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/mitr_medium"
        android:gravity="center_vertical"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_scanYourCarButton"
        tools:ignore="RtlCompat" />


    <Button
        android:id="@+id/main_googleLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_background"
        android:drawablePadding="8dp"
        android:fontFamily="@font/mitr_medium"
        android:padding="8dp"
        android:text="@string/googleAuth"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/main_googleLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_appInfoButton">

        <Button
            android:id="@+id/main_registerButton"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/mitr_medium"
            android:gravity="center_vertical"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/main_logInButton"
            android:layout_width="132dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/mitr_medium"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>